HzrService/clamav.h

	/* return codes */
	typedef enum {
		/* libclamav specific */
		CL_CLEAN = 0,
		CL_SUCCESS = 0,
		CL_VIRUS,
		CL_ENULLARG,
		CL_EARG,
		CL_EMALFDB,
		CL_ECVD,
		CL_EVERIFY,
		CL_EUNPACK,

		/* I/O and memory errors */
		CL_EOPEN,
		CL_ECREAT,
		CL_EUNLINK,
		CL_ESTAT,
		CL_EREAD,
		CL_ESEEK,
		CL_EWRITE,
		CL_EDUP,
		CL_EACCES,
		CL_ETMPFILE,
		CL_ETMPDIR,
		CL_EMAP,
		CL_EMEM,
		CL_ETIMEOUT,

		/* internal (not reported outside libclamav) */
		CL_BREAK,
		CL_EMAXREC,
		CL_EMAXSIZE,
		CL_EMAXFILES,
		CL_EFORMAT,
		CL_EPARSE,
		CL_EBYTECODE,/* may be reported in testmode */
		CL_EBYTECODE_TESTFAIL, /* may be reported in testmode */

		/* c4w error codes */
		CL_ELOCK,
		CL_EBUSY,
		CL_ESTATE,

		/* no error codes below this line please */
		CL_ELAST_ERROR
	} cl_error_t;
	struct cl_engine;
#define CL_INIT_DEFAULT	0x0
	extern int cl_init(unsigned int initoptions);
	extern struct cl_engine *cl_engine_new(void);
	enum cl_engine_field {
		CL_ENGINE_MAX_SCANSIZE,	    /* uint64_t */
		CL_ENGINE_MAX_FILESIZE,	    /* uint64_t */
		CL_ENGINE_MAX_RECURSION,	    /* uint32_t	*/
		CL_ENGINE_MAX_FILES,	    /* uint32_t */
		CL_ENGINE_MIN_CC_COUNT,	    /* uint32_t */
		CL_ENGINE_MIN_SSN_COUNT,	    /* uint32_t */
		CL_ENGINE_PUA_CATEGORIES,	    /* (char *) */
		CL_ENGINE_DB_OPTIONS,	    /* uint32_t */
		CL_ENGINE_DB_VERSION,	    /* uint32_t */
		CL_ENGINE_DB_TIME,		    /* time_t */
		CL_ENGINE_AC_ONLY,		    /* uint32_t */
		CL_ENGINE_AC_MINDEPTH,	    /* uint32_t */
		CL_ENGINE_AC_MAXDEPTH,	    /* uint32_t */
		CL_ENGINE_TMPDIR,		    /* (char *) */
		CL_ENGINE_KEEPTMP,		    /* uint32_t */
		CL_ENGINE_BYTECODE_SECURITY,    /* uint32_t */
		CL_ENGINE_BYTECODE_TIMEOUT,     /* uint32_t */
		CL_ENGINE_BYTECODE_MODE,        /* uint32_t */
		CL_ENGINE_MAX_EMBEDDEDPE,       /* uint64_t */
		CL_ENGINE_MAX_HTMLNORMALIZE,    /* uint64_t */
		CL_ENGINE_MAX_HTMLNOTAGS,       /* uint64_t */
		CL_ENGINE_MAX_SCRIPTNORMALIZE,  /* uint64_t */
		CL_ENGINE_MAX_ZIPTYPERCG,       /* uint64_t */
		CL_ENGINE_FORCETODISK,          /* uint32_t */
		CL_ENGINE_DISABLE_CACHE,        /* uint32_t */
		CL_ENGINE_DISABLE_PE_STATS,     /* uint32_t */
		CL_ENGINE_STATS_TIMEOUT,        /* uint32_t */
		CL_ENGINE_MAX_PARTITIONS,       /* uint32_t */
		CL_ENGINE_MAX_ICONSPE,          /* uint32_t */
		CL_ENGINE_TIME_LIMIT            /* uint32_t */
	};
	extern int cl_engine_set_num(struct cl_engine *engine, enum cl_engine_field field, long long num);
	extern long long cl_engine_get_num(const struct cl_engine *engine, enum cl_engine_field field, int *err);
	extern int cl_engine_set_str(struct cl_engine *engine, enum cl_engine_field field, const char *str);
	extern const char *cl_engine_get_str(const struct cl_engine *engine, enum cl_engine_field field, int *err);
	extern int cl_engine_compile(struct cl_engine *engine);
	extern int cl_engine_free(struct cl_engine *engine);
	struct cl_cvd {		    /* field no. */
		char *time;		    /* 2 */
		unsigned int version;   /* 3 */
		unsigned int sigs;	    /* 4 */
		unsigned int fl;	    /* 5 */
		/* padding */
		char *md5;		    /* 6 */
		char *dsig;		    /* 7 */
		char *builder;	    /* 8 */
		unsigned int stime;	    /* 9 */
	};
	extern int cl_scanfile(const char *filename, const char **virname, unsigned long int *scanned, const struct cl_engine *engine, unsigned int scanoptions);
	/* database handling */
	extern int cl_load(const char *path, struct cl_engine *engine, unsigned int *signo, unsigned int dboptions);
	/* engine handling */

	/* CVD */
	extern struct cl_cvd *cl_cvdhead(const char *file);
	extern void cl_cvdfree(struct cl_cvd *cvd);
	extern const char *cl_retver(void);
	typedef struct cl_fmap cl_fmap_t;
	/* Open a map for scanning custom data, where the data is already in memory,
	* either in the form of a buffer, a memory mapped file, etc.
	* Note that the memory [start, start+len) must be the _entire_ file,
	* you can't give it parts of a file and expect detection to work.
	*/
	extern cl_fmap_t *cl_fmap_open_memory(const void *start, size_t len);
	/* Releases resources associated with the map, you should release any resources
	* you hold only after (handles, maps) calling this function */
	extern void cl_fmap_close(cl_fmap_t*);
	/* Scan custom data */
	extern int cl_scanmap_callback(cl_fmap_t *map, const char **virname, unsigned long int *scanned, const struct cl_engine *engine, unsigned int scanoptions, void *context);